[tool.poetry]
name = "optuna_fabrics"
version = "0.1.0"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
optuna = "^2.10"
plotly = "^5.8.0"
joblib = "^1.1.0"
matplotlib = "^3.1"
urdfenvs = {extras = ["mujoco"], version = "^0.9.9"}
fabrics = {path = "../fabrics"}
scikit-learn = "^1.2.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
